tests/paczka1/fuzzy1/99782172.err
Error in line 14: la1mRv3Rt S526 48,7
Error in line 17: 69aox0Pz8Py S526 62,3
Error in line 34: 69aox0Pz8Py S841 60,4
